--- a/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GPU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Assembly.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NSSDL.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GPU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assembly.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
