Whole GPU rewrite

--- a/VirtualPCCpp/VirtualPCCpp.vcxproj
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Assembly.cpp" />
     <ClCompile Include="CPU.cpp" />
     <ClCompile Include="GPU.cpp" />
+    <ClCompile Include="GPUOld.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Memory.cpp" />
     <ClCompile Include="NSSDL.cpp" />
@@ -32,6 +33,7 @@
     <ClInclude Include="Assembly.h" />
     <ClInclude Include="CPU.h" />
     <ClInclude Include="GPU.h" />
+    <ClInclude Include="GPUOld.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="NSSDL.h" />
     <ClInclude Include="PC.h" />
