--- a/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
@@ -33,10 +33,13 @@
     <ClCompile Include="Memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GPU.cpp">
+    <ClCompile Include="Assembly.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Assembly.cpp">
+    <ClCompile Include="GPUOld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GPU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,10 +59,13 @@
     <ClInclude Include="Memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GPU.h">
+    <ClInclude Include="Assembly.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Assembly.h">
+    <ClInclude Include="GPUOld.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GPU.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
