--- a/VirtualPCCpp/VirtualPCCpp.vcxproj
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="fontBasic.txt" />
+    <Text Include="Program.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
