--- a/VirtualPCCpp/VirtualPCCpp.vcxproj
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Text Include="Assembly Documentation.txt" />
     <Text Include="CPU Specification.txt" />
+    <Text Include="DrawLine.txt" />
     <Text Include="fontBasic.txt" />
+    <Text Include="HDD.txt" />
     <Text Include="Program.txt" />
     <Text Include="SquareDrawing.txt" />
   </ItemGroup>
