--- a/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
+++ b/VirtualPCCpp/VirtualPCCpp.vcxproj.filters
@@ -79,5 +79,8 @@
     <Text Include="KeyboardInputExample.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="CPU Documentation.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
